<resources>
    <string name="app_name">MaxMaatti</string>
    <string name="login_text">Login</string>
    <string name="login_failed">Login failed. Please try again!</string>

    <string name="withdrawal_title">Withdrawal</string>
    <string name="withdrawal_text">How much would you like to withdraw?</string>
    <string name="event_type">Event type</string>
    <string name="balance_change">Balance change</string>
    <string name="event_time">Event time</string>
    <string name="event_description">Description</string>

    <string name="withdraw_20">20€</string>
    <string name="withdraw_40">40€</string>
    <string name="withdraw_60">60€</string>
    <string name="withdraw_100">100€</string>
    <string name="withdraw_140">140€</string>
    <string name="withdraw_200">200€</string>

    <string name="withdraw_optional_field_hint"><i>Enter amount:</i></string>
    <string name="withdraw_optional_text">Optional amount: </string>

    <string name="withdraw_optional_button">Withdraw</string>

    <string name="balance_text">Your balance is: </string>

    <string name="deposit_text">How much would you like to deposit?</string>
    <string name="deposit_amount_hint"><i>Enter amount: </i></string>
    <string name="deposit_text_header">Deposit</string>
    <string name="deposit_button">Deposit</string>

    <string name="logout_text_header">Logout</string>
    <string name="logout_yes_button">Yes</string>
    <string name="logout_no_button">No</string>
    <string name="logout_text">Are you sure you want to logout?</string>

    <string name="transaction_text_header">Transaction</string>
    <string name="transaction_text_receiver">Enter account you want to transfer to:</string>
    <string name="transaction_text_receiver_hint"><i>Card number: </i></string>
    <string name="transaction_text_amount">Enter amount you want to transfer:</string>
    <string name="transaction_text_amount_hint"><i>Amount: </i></string>
    <string name="transaction_text_message_hint"><i>(Optional) Message: </i></string>
    <string name="transaction_button">Transfer</string>

    <string name="login_text_hint"><i>Card number</i></string>
    <string name="login_pin_hint"><i>PIN code</i></string>

    <string name="about_creator">© 2019 Max Mehtomaa</string>
    <string name="about_name">MaxMaatti</string>
    <string name="about_button">About</string>


</resources>
