<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WithdrawalActivity">

    <TextView
        android:textAlignment="center"
        android:textSize="30sp"
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/arial"
        android:text="@string/withdrawal_title" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/withdrawal_text"
        android:textAlignment="center"
        android:fontFamily="@font/arial"
        android:textSize="20sp" />


    <Button
        android:id="@+id/withdraw20_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/arial"
        android:text="@string/withdraw_20" />

    <Button
        android:id="@+id/withdraw40_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/arial"
        android:text="@string/withdraw_40" />

    <Button
        android:id="@+id/withdraw60_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:fontFamily="@font/arial"
        android:text="@string/withdraw_60" />

    <Button
        android:id="@+id/withdraw100_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/arial"
        android:text="@string/withdraw_100" />

    <Button
        android:id="@+id/withdraw140_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/arial"
        android:text="@string/withdraw_140" />

    <Button
        android:id="@+id/withdraw200_button"
        android:layout_width="wrap_content"
        android:fontFamily="@font/arial"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_alignParentRight="true"
        android:text="@string/withdraw_200" />

    <EditText
        android:id="@+id/withdraw_optional_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="104dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:fontFamily="@font/arial"
        android:hint="@string/withdraw_optional_field_hint"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="190dp"
        android:fontFamily="@font/arial"
        android:layout_centerHorizontal="true"
        android:text="@string/withdraw_optional_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/withdraw_optional_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/arial"
        android:text="@string/withdraw_optional_button" />

</RelativeLayout>