<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DepositActivity">

    <EditText
        android:id="@+id/deposit_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="353dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/deposit_amount_hint"
        android:fontFamily="@font/arial"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="86dp"
        android:layout_centerHorizontal="true"
        android:text="@string/deposit_text"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="@font/arial"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="112dp" />

    <TextView
        android:id="@+id/textView6"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_width="423dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:layout_centerHorizontal="true"
        android:text="@string/deposit_text_header"
        android:fontFamily="@font/arial" />


    <Button
        android:id="@+id/deposit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="225dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/arial"
        android:text="@string/deposit_button" />

</RelativeLayout>