<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <TextView
        android:id="@+id/login_text"
        android:layout_width="134dp"
        android:layout_height="63dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:text="@string/login_text"
        android:textSize="30sp"
        android:fontFamily="@font/arial"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/card_number_field"
        android:digits="0123456789."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="187dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:imeOptions="actionDone"
        android:hint="@string/login_text_hint"
        android:fontFamily="@font/arial"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/pin_code_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="275dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/login_pin_hint"
        android:fontFamily="@font/arial"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="304dp"
        android:layout_height="146dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login_text"
        android:fontFamily="@font/arial"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/about_popup_button"
        android:text="@string/about_button"/>

    <TextView
        android:id="@+id/login_failed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="151dp"
        android:layout_centerHorizontal="true"
        android:text=""
        android:fontFamily="@font/arial"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="214dp" />




</RelativeLayout>